# jessaiv2

./: requirements.txt
jessaiv2/: README.md  app.py  pyproject.toml
jessaiv2/jessaiv2/config/: __init__.py  config_manager.py  settings.json
jessaiv2/jessaiv2/core/: __init__.py  assistant.py  twilio_handler.py  utilities.py
jessaiv2/jessaiv2/data/: __init__.py
jessaiv2/jessaiv2/jessaiv2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jessaiv2/jessaiv2/tests/: test_twilio_handler.py
