[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jessaiv2"
version = "0.1.0"
description = "Jess AI Assistant"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # You can list your main dependencies here, or leave empty if using requirements.txt
]

[tool.setuptools.packages.find]
where = ["jessaiv2"]